created pages and started formatting

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jordan Collins">
+    <link rel="icon" type="img/png" href="img/placeholder.png">
     <title>Jordan Collins Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +15,15 @@
 </head>
 
 <!-- navigation bar
- you need to right align it -->
+ you need to right align it and find out how to make a popup -->
 <body>
     <nav>
         <ul>
           <li>
-            <a href="">ABOUT ME</a>
+            <a href="about.html">ABOUT ME</a>
           </li>
           <li>
-            <a href="">PROJECTS</a>
+            <a href="projects.html">PROJECTS</a>
           </li>
           <li>
             <a href="">CONTACT</a>
@@ -36,10 +37,10 @@
 </div>
 
 <!-- header with introduction -->
-<div class="main_section">
+ <div class="main_section">
 <div class="header">
     <h1>Hello, I'm <mark>Jordan Collins</mark><br>  
-        Welcome to my Porfolio
+        Welcome to my Portfolio!
     </h1>
     <p>
         Short introductory body text about me. Should be long enough to catch the eye of the visitor
@@ -64,7 +65,7 @@
         they can download or view it here.</p>
 </div>
 
-<!-- fuckass card section -->
+<!-- card section -->
 <div class="card-row">
     <div class="card-column">
         <div class="card">
