--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       </nav>
 
 <!-- side image panel -->
-<div class="image-panel">
+<!-- <div class="image-panel">
     <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
-</div>
+</div> -->
 
 <!-- header with introduction -->
- <div class="main_section">
+<div class="main_section">
 <div class="header">
     <h1>Hello, I'm <mark>Jordan Collins</mark><br>  
         Welcome to my Portfolio!
