--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 <body>
     <nav>
         <ul>
-          <li>
-            <a href="about.html">ABOUT ME</a>
-          </li>
-          <li>
+            <li>
+                <a href="index.html"><img src="img/circle.png" alt="Home"></a>
+            </li>
+            <li>
+                <a href="about.html">ABOUT ME</a>
+            </li>
+            <li>
             <a href="projects.html">PROJECTS</a>
           </li>
           <li>
@@ -31,22 +34,26 @@
         </ul>
       </nav>
 
-<!-- side image panel -->
-<!-- <div class="image-panel">
+<!-- side image panel-->
+ <div class="image-panel">
     <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
-</div> -->
+    <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
+</div> 
 
 <!-- header with introduction -->
 <div class="main_section">
-<div class="header">
-    <h1>Hello, I'm <mark>Jordan Collins</mark><br>  
+<div class="opener">
+    <h1>Hi, I'm <mark>Jordan Collins</mark><br>  
         Welcome to my Portfolio!
     </h1>
     <p>
-        Short introductory body text about me. Should be long enough to catch the eye of the visitor
+        Short introductory body text about me. 
+        Should be long enough to catch the eye of the visitor
     </p>
-    <a href="mailto:jlc21f@fsu.edu">jlc21f@fsu.edu</a>
-    <a href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn"></a>
+    <a href="mailto:jlc21f@fsu.edu">jlc21f@fsu.edu<br><br>
+    </a>
+    <a href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+    </a>
 </div>
 
 <!-- section with the background -->
@@ -59,10 +66,21 @@
 
 <!-- section with my resume
  you need to add the resume and the links to download and view it -->
-<div class="right_section">
+    <div class="card-row2">
+        <div class="card-column2">
+            <div class="card2">
+    <img src="img/placeholder.png" alt="my resume">
+    </div>
+    </div>
+        <div class="card-column2">
+            <div class="card2">
     <h2>My Resume</h2>
     <p>This can be where I talk about how if you want to read my resume, rather than go through the website, 
         they can download or view it here.</p>
+        <a href="#"><i><b><u>Download</u></b></i></a><br><br>
+        <a href="#"><i><b><u>View</u></b></i></a><br><br>
+        </div>
+        </div>
 </div>
 
 <!-- card section -->
@@ -75,14 +93,15 @@
         </div>
     </div>
 
-    <div class="card-column"></div>
+    <div class="card-column">
         <div class="card">
             <img src="img/placeholder.png" alt="something to intice you to go to the projects page">
             <p>Want to see some projects I have done? 
                 I listed the various projects I have completed on the projects page!</p>            
         </div>
     </div>
-</div>
+    </div>
+
 
 
 </div>
