--- a/projects.html
+++ b/projects.html
@@ -11,34 +11,40 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">        <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/projects.css">
 </head>
 
 <!-- navigation bar
  you need to right align it -->
-<body>
+ <body>
     <nav>
         <ul>
-          <li>
-            <a href="">ABOUT ME</a>
-          </li>
-          <li>
-            <a href="">PROJECTS</a>
+            <li>
+                <a href="index.html"><img src="img/circle.png" alt="Home"></a>
+            </li>
+            <li>
+                <a href="about.html">ABOUT ME</a>
+            </li>
+            <li>
+            <a href="projects.html">PROJECTS</a>
           </li>
           <li>
             <a href="">CONTACT</a>
           </li>
         </ul>
       </nav>
-
-<!-- side image panel -->
-<div class="image-panel">
+      
+  
+  <!-- side image panel -->
+  <div class="image-panel">
     <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
-</div>
-
+    <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
+    <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
+  </div>
+  
 <!-- header with navigation links -->
 <div class="main_section">
-<div class="header">
+<div class="opener">
     <h1>My <mark>Projects</mark></h1>
     <p>
         Short introductory body text about me. Should be long enough to catch the eye of the visitor
@@ -50,23 +56,23 @@
 
 <!-- section with the experience -->
 <div class="left_section">
-    <div class="project-fomat">
+    <div class="project-format">
         <a id="#DESIGN_PROJECTS"><h2>Design Projects</h2></a>
         <div class="project-seciton">
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
         </div>
 
@@ -75,12 +81,12 @@
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
         </div>
 
@@ -89,17 +95,17 @@
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
             <div class="project">
                 <h3><b>Project Name</b><br>
                 Short Description</h3>
-                <img src="img/placeholder.png">
+                <img src="img/placeholder2.png">
             </div>
         </div>
     </div>
@@ -107,7 +113,15 @@
 </div>
 
 </div>
-
+<div class="contact">
+    <h2>Drop a message!</h2>
+    <form>
+        <input type="text" name="name" placeholder="Your name"><br>
+        <input type="email" name="email" placeholder="Your email address"><br>
+        <textarea name="message" placeholder="Your message"></textarea><br>
+        <button type="submit">Send</button>
+    </form>
+</div>
 
 </div>
 </body>
