--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html"><img src="img/circle.png" alt="Home"></a>
+                <a href="index.html"><img src="img/Subtract.png" alt="Home"></a>
             </li>
             <li>
                 <a href="about.html">ABOUT ME</a>
@@ -28,16 +28,15 @@
             <li>
             <a href="projects.html">PROJECTS</a>
           </li>
-          <li>
+          <!--<li>
             <a href="">CONTACT</a>
-          </li>
+          </li> -->
         </ul>
       </nav>
 
 <!-- side image panel-->
  <div class="image-panel">
-    <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
-    <img src="img/placeholder.png" alt="at some point ill add a picture of myself">
+    <img src="img/home-panel-image.png" alt="at some point ill add a picture of myself">
 </div> 
 
 <!-- header with introduction -->
@@ -47,8 +46,10 @@
         Welcome to my Portfolio!
     </h1>
     <p>
-        Short introductory body text about me. 
-        Should be long enough to catch the eye of the visitor
+        Hello! Please take a look around my Portfolio. 
+        You can either navigate through the website with the navigation bar 
+        to the right or you can scroll down and read my resume. 
+        Or you can click my email or the LinkedIn logo below to get in touch. Enjoy!
     </p>
     <a href="mailto:jlc21f@fsu.edu">jlc21f@fsu.edu<br><br>
     </a>
@@ -59,9 +60,10 @@
 <!-- section with the background -->
 <div class="left_section">
     <h2>My Background</h2>
-    <p>il designer non deve mai dimenticare che i modelli mentali delle persone cambiano:
-        restituire un contenuto alla portata di tutti vuol dire comprendere intimamente le motivazioni dei
-         processi mentali dietro uno stato d'animo e le modalità di fruizione delle informazioni.</p>
+    <p>My name is Jordan Collins and I am an Information Technology major from Jacksonville, Florida.
+         I am currrently a senior at Florida State University working toward my Bachelors in Science in IT.
+         My focuses so far are in Web Design, Networking, and Data Analytics and I am looking for careers in those fields.
+        </p>
 </div>
 
 <!-- section with my resume
@@ -69,16 +71,18 @@
     <div class="card-row2">
         <div class="card-column2">
             <div class="card2">
-    <img src="img/placeholder.png" alt="my resume">
-    </div>
+                <a href="img/resume.pdf">
+                    <img class="img-fluid" alt="open pdf" src="img/resume.png">
+               </a>    </div>
     </div>
         <div class="card-column2">
             <div class="card2">
     <h2>My Resume</h2>
-    <p>This can be where I talk about how if you want to read my resume, rather than go through the website, 
-        they can download or view it here.</p>
-        <a href="#"><i><b><u>Download</u></b></i></a><br><br>
-        <a href="#"><i><b><u>View</u></b></i></a><br><br>
+    <p>If you want to read my resume, rather than go through the website, 
+        you can download or view it here. But I would at least check out the projects
+         page to see all of my more recent projects.</p>
+        <!-- <a href="img/resume.png" download="jordan_collins_resume"><i><b><u>Download</u></b></i></a><br><br> -->
+        <a href="img/jordan_collins_resume.pdf"><i><b><u>View</u></b></i></a><br><br>
         </div>
         </div>
 </div>
@@ -87,19 +91,28 @@
 <div class="card-row">
     <div class="card-column">
         <div class="card">
-            <img src="img/placeholder.png" alt="something to intice you to go to the about page">
-            <p>Want to learn more about me? 
+            <a href="about.html" alt="Visit the About Page"><img src="img/placeholder.png" class="image" alt="something to intice you to go to the about page"></a>
+            <p>Want to learn more about me? <br>
                 I have more information about me like my education and skills on my about page!</p>
         </div>
     </div>
 
     <div class="card-column">
         <div class="card">
-            <img src="img/placeholder.png" alt="something to intice you to go to the projects page">
-            <p>Want to see some projects I have done? 
-                I listed the various projects I have completed on the projects page!</p>            
+            <a href="projects.html" alt="Visit the Projects Page"><img src="img/placeholder.png" class="image" alt="something to intice you to go to the projects page"></a>
+            <p>Want to see some projects I have done? <br>
+                I listed the various projects I have completed on the projects page!</p>
         </div>
     </div>
+    <div class="contact">
+        <p>Contact me via email or on LinkedIn</p>
+        <div class="contact-icons">
+        <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
+        </a>
+        <a href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+        </a>
+        </div>
+        </div>
     </div>
 
 
