fixed bottom home links

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@ CTS 2314 - Network Defense and Countermeasures
 </div>
 
 <div class="contact">
-    <p>Contact me via email or on LinkedIn</p>
+    <p>Contact me via email or on LinkedIn!</p>
     <div class="contact-icons">
     <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
     </a>
