--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Jordan Collins Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">        <link rel="stylesheet" href="assets/css/home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
 </head>
@@ -71,7 +71,7 @@
     <div class="card-row2">
         <div class="card-column2">
             <div class="card2">
-                <a href="img/resume.pdf">
+                <a href="img/jordan_collins_resume.pdf">
                     <img class="img-fluid" alt="open pdf" src="img/resume.png">
                </a>    </div>
     </div>
@@ -91,7 +91,7 @@
 <div class="card-row">
     <div class="card-column">
         <div class="card">
-            <a href="about.html" alt="Visit the About Page"><img src="img/placeholder.png" class="image" alt="something to intice you to go to the about page"></a>
+            <a href="about.html" alt="Visit the About Page"><img src="img/placeholder.png" class="image" alt="About page"></a>
             <p>Want to learn more about me? <br>
                 I have more information about me like my education and skills on my about page!</p>
         </div>
@@ -99,13 +99,15 @@
 
     <div class="card-column">
         <div class="card">
-            <a href="projects.html" alt="Visit the Projects Page"><img src="img/placeholder.png" class="image" alt="something to intice you to go to the projects page"></a>
+            <a href="projects.html" alt="Visit the Projects Page"><img src="img/placeholder.png" class="image" alt="Projects page"></a>
             <p>Want to see some projects I have done? <br>
                 I listed the various projects I have completed on the projects page!</p>
         </div>
     </div>
+</div>
+
     <div class="contact">
-        <p>Contact me via email or on LinkedIn</p>
+        <p>Contact me via email or on LinkedIn!</p>
         <div class="contact-icons">
         <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
         </a>
@@ -113,7 +115,7 @@
         </a>
         </div>
         </div>
-    </div>
+    
 
 
 
