--- a/projects.html
+++ b/projects.html
@@ -138,11 +138,6 @@
                 <a href="https://github.com/codeducationfsu/codeducationfsu.github.io" 
                 alt="Check out the GitHub"><img src="img/placeholder2.png" class="image"></a>
             </div> 
-            <div class="project">
-                <h3><b>Mobile App Project Proposal</b><br>
-                Short Description</h3>
-                <img src="img/placeholder2.png">
-            </div>
         </div>
     </div>
     <p></p>
@@ -150,7 +145,7 @@
 
 </div>
 <div class="contact">
-<p>Contact me via email or on LinkedIn</p>
+<p>Contact me via email or on LinkedIn!</p>
 <div class="contact-icons">
 <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
 </a>
