--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
     <h1>My <mark>Projects</mark></h1>
     <p>
         Here are a few of the projects I have completed for classes or otherwise other that this website you're on right now. 
-        This includes links to Bitbucket, GitHub, Figma, and just the presentation that was given for them.
+        This includes links to Bitbucket, GitHub, Figma, or just the presentation that was given for them.
          You can also just visit the projects page on my LinkedIn that I have provided below for more details.
     </p>
     <a href="https://www.linkedin.com/in/jordan--collins/details/projects/">Projects on LinkedIn<br></a>
