added panel images

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 <div class="opener">
     <h1><mark>About</mark> Me</h1>
     <p>
-        Short introductory body text about me. Should be long enough to catch the eye of the visitor
+        On this page, you will find my working experience, my current education, and any skills I have gained from them.
     </p>
     </div>
 
@@ -135,7 +135,11 @@ CTS 2314 - Network Defense and Countermeasures
              <td>Bash</td>
              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"><img src="img/no_star.png"></td>
             </tr>
-          </table>
+            <tr>
+              <td>Graphic Design</td>
+              <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+            </tr>
+            </table>
         </div>
     </div>
 
@@ -169,6 +173,10 @@ CTS 2314 - Network Defense and Countermeasures
               </tr>
               <tr>
                 <td>Microsoft Office</td>
+                <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
+              </tr>
+              <tr>
+                <td>Research</td>
                 <td><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/star.png"><img src="img/no_star.png"></td>
               </tr>
               </table>           
