--- a/projects.html
+++ b/projects.html
@@ -150,6 +150,14 @@
                 <a href="https://github.com/codeducationfsu/codeducationfsu.github.io" 
                 alt="Check out the GitHub"><img src="img/placeholder2.png" class="image"></a>
             </div> 
+            <div class="project">
+                <h3><b>Desk Assistant Stickers</b><br></h3>
+                    <p>In January 2024, my supervisor for University Housing said that they were hosting a sticker competition and if we 
+                        submitted and idea for stickers it would be considered for the sticker design that year. The requirement was one 
+                        but I made 15 because I had so many ideas. This presentation is very informal! It was sort of a joke but most of 
+                        the ideas were serious contenders that were made into stickers!</p>
+                    <a href="img/my sticker ideas.pdf" alt="See the presentation"><img src="img/placeholder2.png" class="image"></a>
+            </div> 
           </details>
 </div>
 
