--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jordan Collins">
-    <link rel="icon" type="img/png" href="img/placeholder.png">
+    <link rel="icon" type="img/png" href="img/favicon.png">
     <title>About Me</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -192,7 +192,7 @@ CTS 2314 - Network Defense and Countermeasures
     <div class="contact-icons">
     <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
     </a>
-    <a href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
     </a>
     </div>
     </div>
