--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Jordan Collins">
-    <link rel="icon" type="img/png" href="img/placeholder.png">
-    <title>Jordan Collins Portfolio</title>
+    <link rel="icon" type="img/png" href="img/favicon.png">
+    <title>Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -42,18 +42,15 @@
 </div> 
 
 <div class="opener">
-    <h1>Hi, I'm <mark>Jordan Collins</mark><br>  
-        Welcome to my Portfolio!
+    <h1>Hi, I'm <mark>Jordan Collins</mark>
     </h1>
     <p>
-        Hello! Please take a look around my Portfolio. 
-        You can either navigate through the website with the navigation bar 
-        to the right or you can scroll down and read my resume. 
-        Or you can click my email or the LinkedIn logo below to get in touch. Enjoy!
+        You can either navigate through my website with the navigation bar 
+        to the left or you can scroll down and read my resume.
     </p>
     <a href="mailto:jlc21f@fsu.edu">jlc21f@fsu.edu<br><br>
     </a>
-    <a href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
     </a>
 </div>
 
@@ -62,7 +59,8 @@
     <h2>My Background</h2>
     <p>My name is Jordan Collins and I am an Information Technology major from Jacksonville, Florida.
          I am currrently a senior at Florida State University working toward my Bachelors in Science in IT.
-         My focuses so far are in Web Design, Networking, and Data Analytics and I am looking for careers in those fields.
+         My focuses so far are in Web Design, Networking, and Data Analytics and I am pursuing careers as a 
+         Web Designer, Network Specialist or Data Analyst.
         </p>
 </div>
 
@@ -71,7 +69,7 @@
     <div class="card-row2">
         <div class="card-column2">
             <div class="card2">
-                <a href="img/jordan_collins_resume.pdf">
+                <a target="_blank" href="img/jordan_collins_resume.pdf">
                     <img class="img-fluid" alt="open pdf" src="img/resume.png">
                </a>    </div>
     </div>
@@ -82,7 +80,7 @@
         you can download or view it here. But I would at least check out the projects
          page to see all of my more recent projects.</p>
         <!-- <a href="img/resume.png" download="jordan_collins_resume"><i><b><u>Download</u></b></i></a><br><br> -->
-        <a href="img/jordan_collins_resume.pdf"><i><b><u>View</u></b></i></a><br><br>
+        <a target="_blank" href="img/jordan_collins_resume.pdf"><i><b><u>View</u></b></i></a><br><br>
         </div>
         </div>
 </div>
@@ -92,17 +90,17 @@
 <div class="card-row">
     <div class="card-column">
         <div class="card">
-            <a href="about.html" alt="Visit the About Page"><img src="img/placeholder.png" class="image" alt="About page"></a>
-            <p>Want to learn more about me? <br>
-                I have more information about me like my education and skills on my about page!</p>
+            <h3>Want to learn more about me?</h3>
+            <a target="_blank" href="about.html" alt="Visit the About Page"><img src="img/home_about.png" class="image" alt="About page"></a>
+            <p>I have more information about me like my education and skills on my about page!</p>
         </div>
     </div>
 
     <div class="card-column">
         <div class="card">
-            <a href="projects.html" alt="Visit the Projects Page"><img src="img/placeholder.png" class="image" alt="Projects page"></a>
-            <p>Want to see some projects I have done? <br>
-                I listed the various projects I have completed on the projects page!</p>
+            <h3>Want to see some projects I have done?</h3>
+            <a target="_blank" href="projects.html" alt="Visit the Projects Page"><img src="img/home_project.png" class="image" alt="Projects page"></a>
+            <p> I listed the various projects I have completed on the projects page!</p>
         </div>
     </div>
 </div>
@@ -112,7 +110,7 @@
         <div class="contact-icons">
         <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
         </a>
-        <a href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+        <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
         </a>
         </div>
         </div>
