--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jordan Collins">
-    <link rel="icon" type="img/png" href="img/placeholder.png">
+    <link rel="icon" type="img/png" href="img/favicon.png">
     <title>My Projects</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
             <a href="projects.html">PROJECTS</a>
           </li>
            <!-- <li>
-           <a href="">CONTACT</a>
+           <a target="_blank"href="">CONTACT</a>
           </li> -->
         </ul>
       </nav>
@@ -45,15 +45,15 @@
 <div class="opener">
     <h1>My <mark>Projects</mark></h1>
     <p>
-        Here are a few of the projects I have completed for classes or otherwise other that this website you're on right now. 
+        Here are a few of the projects I have completed for classes or otherwise. 
         This includes links to Bitbucket, GitHub, Figma, or just the presentation that was given for them. Click on each project header to
         see the individual projects.
         <br><br>You can also just visit the projects page on my LinkedIn that I have provided below for more details.
     </p>
-    <a href="https://www.linkedin.com/in/jordan--collins/details/projects/">Projects on LinkedIn<br></a>
-    <!-- <a href="#DESIGN_PROJECTS">Design Projects<br></a>
-    <a href="#DEV_PROJECTS">Development Projects<br></a>
-    <a href="#EXTRA_PROJECTS">Extracurricular Projects<br></a> -->
+    <a target="_blank" href="https://www.linkedin.com/in/jordan--collins/details/projects/" target="_blank">Projects on LinkedIn<br></a>
+    <!-- <a target="_blank"target=""href="#DESIGN_PROJECTS">Design Projects<br></a>
+    <a target="_blank"href="#DEV_PROJECTS">Development Projects<br></a>
+    <a target="_blank"href="#EXTRA_PROJECTS">Extracurricular Projects<br></a> -->
     </div>
 
 <!-- section with the experience -->
@@ -65,40 +65,39 @@
             </summary>
             <div class="project">
                 <h3><br><b>User Experience Design #3</b><br></h3>
-                    <p>For LIS4351, we were tasked to create a redesign for a photobooth for an application
-                our professor used over a decade ago. It was a group of five, but the design and development was completely mine with feedback from 
+                    <p>For LIS4351, we were tasked to create a redesign for a photobooth for an application our professor used over a 
+                    decade ago. It was a group of five, but the design and development was completely mine with feedback from 
             my group mates. If you want to run the demo, it is set up to allow you to choose 2 pictures, 2 emails, and 2 printed photos 
             with the FSU logo and Super Mario Galaxy as backgrounds and you can't enter any text. You can also just keep hitting continue 
-            if you don't care to run the demo and want to just see what our design looks like. <!-- Change this text so its on the image -->
+            if you don't care to run the demo and want to just see what our design looks like.
         </p>
-                <a href="https://www.figma.com/proto/KbKCcG2I9OtYRnN5GmP2fs/Sprint-3?node-id=18-178&node-type=canvas&t=PO208mAJY0lRT25V-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A178" 
-                alt="See the UX Design"><img src="img/placeholder2.png" class="image"></a>
+                <a target="_blank" href="https://www.figma.com/proto/KbKCcG2I9OtYRnN5GmP2fs/Sprint-3?node-id=18-178&node-type=canvas&t=PO208mAJY0lRT25V-1&scaling=contain&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A178" 
+                alt="See the UX Design"><img src="img/ux3.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>User Experience Design #4</b><br></h3>
                     <p>In this group assignment for LIS4351 we were given a possible startup project from our professor.
                      I was given the games page and the drill practice page as well, but I helped with the design on all pages.
                       It is a bit hard to navigate at some points, but you can simulate a drill and look around all pages.</p>
-                <a href="https://www.figma.com/proto/NBxAsmJDVHv4pyW8yA4TPx/DrawDrillls-Website?node-id=289-3951&starting-point-node-id=289%3A3951&t=s7NlJ6Gg3xY07yVs-1" 
-                alt="See the UX Design"><img src="img/placeholder2.png" class="image"></a>
+                <a target="_blank" href="https://www.figma.com/proto/NBxAsmJDVHv4pyW8yA4TPx/DrawDrillls-Website?node-id=289-3951&starting-point-node-id=289%3A3951&t=s7NlJ6Gg3xY07yVs-1" 
+                alt="See the UX Design"><img src="img/ux4.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>Mobile App Project Proposal</b><br></h3>
-                    <p>For Spring 2024, I took Research and Data Analysis in Information Technology, LIS3201, and was tasked to propose a fake product for a fake company. 
-                    The fake product my group and I decided to do was an app for the fake company Health @ Home called the Health @ Home app.
-                    We decided to make an app that improves communication between patients and physicians who use Health @ Home. 
-                    For this project, we had to do research on costs for app creation with the limited budget of Health @ Home and we 
-                    had to present this app to our "stakeholders". </p>
-                <a href="img/3201final.pdf" alt="See the Proposal"><img src="img/placeholder2.png" class="image"></a>
+                    <p>For Spring 2024, I took Research and Data Analysis in Information Technology, LIS3201, and was tasked to 
+                    propose a product for a mock company. The product my group and I decided to do was an app for the mock company 
+                    Health @ Home called the Health @ Home app. We decided to make an app that improves communication between 
+                    patients and physicians who use Health @ Home. For this project, we had to do research on costs for app creation 
+                    with the limited budget of Health @ Home and we had to present this app to our "stakeholders". </p>
+                <a target="_blank"href="img/3201final.pdf" alt="See the Proposal"><img src="img/mob_app.png" class="image"></a>
             </div>
             <div class="project">
                 <h3><b>Information Archetecture Project</b><br></h3>
-                    <p>In this group assignment for LIS3793 we where were tasked 
-                    with redesigning a real website to have better architecture by changing 
-                    the information scent and spread. I also completely changed the layout and 
-                    color of the website to be more inviting to new users.</p>
-                <a href="https://www.figma.com/proto/EPcK7Ty8W3ZTov10SAf9Vt/IA-Wireframe?t=IKnq5ggD9buIBR0T-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&node-id=1-2" 
-                alt="See the IA Wireframe"><img src="img/placeholder2.png" class="image"></a>
+                    <p>In this group assignment for Information Archetecture, LIS3793, we where were tasked with redesigning a 
+                    website for a business to have better architecture by changing the information scent and spread. I also completely 
+                    changed the layout and color of the website to be more inviting to new users.</p>
+                <a target="_blank" href="https://www.figma.com/proto/EPcK7Ty8W3ZTov10SAf9Vt/IA-Wireframe?t=IKnq5ggD9buIBR0T-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&node-id=1-2" 
+                alt="See the IA Wireframe"><img src="img/IAP.png" class="image"></a>
             </div>
           </details>
 
@@ -114,16 +113,16 @@
                     <p>For LIS4368, I used HTML, CSS, JavaScript, and Java to create website for the assignments of the class.
                 In the class, we used Tomcat, Bitbucket, AAMPS, mySQL workbench to complete various assignments about databases and forms.
                 In the Bitbucket link provided, the README shows what each assignment does and leads to the assignment README for more details.</p>
-                <a href="https://bitbucket.org/lis4368jlc/lis4368/src/main/" 
-                alt="See the Class Bitbucket"><img src="img/placeholder2.png" class="image"></a>
+                <a target="_blank" href="https://bitbucket.org/lis4368jlc/lis4368/src/main/" 
+                alt="See the Class Bitbucket"><img src="img/lis4368.png" class="image"></a>
             </div> 
             <div class="project">
                 <h3><b>Extensible Enterprise Solutions Project</b><br></h3>
-                    <p>Currenlty an class I'm taking in Fall 2024, for LIS4369, we are working on different assignments using Python, 
+                    <p>Currenlty a class I'm taking in Fall 2024, for LIS4369, we are working on different assignments using Python, 
                     Anaconda, and eventually RStudio. In the Bitbucket link provided, the README shows what each assignment does and 
                     leads to the assignment README for more details.</p>
-                <a href="https://bitbucket.org/lis4368jlc/lis4369/src/master/" 
-                alt="See the Class Bitbucket"><img src="img/placeholder2.png" class="image"></a>
+                <a target="_blank" href="https://bitbucket.org/lis4368jlc/lis4369/src/master/" 
+                alt="See the Class Bitbucket"><img src="img/lis4369.png" class="image"></a>
             </div> 
           </details>
 
@@ -139,24 +138,24 @@
                     <p>A 24-hour design sprint hosted by Gator User Design with the theme of the Healthier Future. 
                     In this submission, we decided to make a game where you need to make the best choices for Harmony Heights - 
                     a small town that has elected you as its mayor. We did not end up winning, but we had fun making this nonetheless.</p>
-                <a href="https://www.figma.com/proto/EcPbp1IECN3Cmh9WGFY826/The-Healthier-Future?node-id=12-54&starting-point-node-id=12%3A54" 
-                alt="Run the Design"><img src="img/placeholder2.png" class="image"></a>
+                <a target="_blank" href="https://www.figma.com/proto/EcPbp1IECN3Cmh9WGFY826/The-Healthier-Future?node-id=12-54&starting-point-node-id=12%3A54" 
+                alt="Run the Design"><img src="img/gatorux.png" class="image"></a>
             </div> 
             <div class="project">
                 <h3><b>Codeducation Website</b><br></h3>
                     <p>As a the Head Webmaster of the Codeducation club, I am currently working on the website for the club which 
                     is being hosted on Github. I completely designed and am coding the Home and Contact pages. 
                     As of now, it is still under construction, but anyone is free to look at our code.</p>
-                <a href="https://github.com/codeducationfsu/codeducationfsu.github.io" 
-                alt="Check out the GitHub"><img src="img/placeholder2.png" class="image"></a>
+                <a target="_blank" href="https://github.com/codeducationfsu/codeducationfsu.github.io" 
+                alt="Check out the GitHub"><img src="img/code_site.png" class="image"></a>
             </div> 
             <div class="project">
                 <h3><b>Desk Assistant Stickers</b><br></h3>
-                    <p>In January 2024, my supervisor for University Housing said that they were hosting a sticker competition and if we 
-                        submitted and idea for stickers it would be considered for the sticker design that year. The requirement was one 
+                    <p>In January 2024, my supervisor for University Housing hosted a sticker competition and the winner
+                        would be considered for the sticker design that year. The requirement was one design
                         but I made 15 because I had so many ideas. This presentation is very informal! It was sort of a joke but most of 
                         the ideas were serious contenders that were made into stickers!</p>
-                    <a href="img/my sticker ideas.pdf" alt="See the presentation"><img src="img/placeholder2.png" class="image"></a>
+                    <a target="_blank" href="img/my sticker ideas.pdf" alt="See the presentation"><img src="img/da_stickers.png" class="image"></a>
             </div> 
           </details>
 </div>
@@ -167,7 +166,7 @@
 <div class="contact-icons">
 <a href="mailto:jlc21f@fsu.edu"><img src="img/Subtract (1).png" alt="Email me"><br><br>
 </a>
-<a href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
+<a target="_blank" href="https://www.linkedin.com/in/jordan--collins/"><img src="img/in.png" alt="My LinkedIn">
 </a>
 </div>
 </div>
