added a break on home

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </h1>
     <p>
         You can either navigate through my website with the navigation bar 
-        to the left or you can scroll down and read my resume.
+        to the left or you can <br>scroll down and read my resume.
     </p>
     <a href="mailto:jlc21f@fsu.edu">jlc21f@fsu.edu<br><br>
     </a>
